fix scrollbar #2

--- a/core/less/common/ev-panels.less
+++ b/core/less/common/ev-panels.less
@@ -152,9 +152,9 @@
 
         > .ev-panel-inner {
             height: 100%;
-            border-bottom: 7px solid @ev-panel-bg;
-            border-left: 7px solid @ev-panel-bg;
-            border-right: 7px solid @ev-panel-bg;
+            border-bottom: @ev-panel-inner-border-width solid @ev-panel-bg;
+            border-left: @ev-panel-inner-border-width solid @ev-panel-bg;
+            border-right: @ev-panel-inner-border-width solid @ev-panel-bg;
             overflow-x: hidden;
             overflow-y: hidden;
 
