--- a/core/less/variables.less
+++ b/core/less/variables.less
@@ -520,6 +520,7 @@
 @ev-panel-inner-border:          @gray-light;
 @ev-panel-border-radius:         @border-radius-base;
 @ev-panel-footer-bg:             #f5f5f5;
+@ev-panel-inner-border-width:    7px;
 
 @ev-panel-default-text:          @gray-dark;
 @ev-panel-default-border:        #ddd;
