--- a/plugins/leaflet/less/index.less
+++ b/plugins/leaflet/less/index.less
@@ -22,5 +22,5 @@
 }
 
 .ev-panel-body .angular-leaflet-map {
-    min-width: @ev-panel-width + (@ev-panel-body-padding * 2);
+    min-width: @ev-panel-width - (@ev-panel-body-padding * 2);
 }
